--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -7,10 +7,16 @@
     min-height: 50rem;
 }
 .header{
+    font-size: 1.4rem;
 height: 7rem;
 background-color: #fff;
 border-bottom: var(--grey-light-2);
-display: block;
+
+display: flex;
+justify-content: space-between;
+align-items: center;
+
+
 }
 .content{
 display: flex;
@@ -20,6 +26,6 @@ background-color: var(--grey-dark-1);
 flex:0 0 18%;
 }
 .hotel-view{
-background-color: #fff;
+background-color: orangered;
 flex: 1;
 }
